# custom-float-calculator

./: .gitignore  Cargo.toml  README.md  custom-float-calculator-df8f3a24e2c8f063.js  index.html  output-cba144a88ad12d5f.css  package-lock.json  tailwind.config.js
.github/workflows/: rust.yml
src/: main.rs
src/components/: app.rs  bin_rep.rs  bit_patterns.rs  err_msg.rs  format_input.rs  help.rs  hex_rep.rs  input.rs  main_container.rs  mod.rs  text_box.rs  user_input.rs
src/utils/: float_result.rs  fn_ptr.rs  mod.rs
