[package]
name = "custom-float-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = "0.19"
float-format = "0.1.3"
wasm-logger = "0.2.0"
log = "0.4.17"
